--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,2 @@
-DATABASE_URL="postgresql://admin:admin@localhost:5432/supertest?schema="
+DATABASE_URL="postgresql://docker:ignite@localhost:5432/supertest?schema="
 PORT=3000
